--- a/app/globals.css
+++ b/app/globals.css
@@ -9,3 +9,30 @@ body {
   height: 100%;
 }
 
+.card_body {
+  overflow: hidden;
+  width: 300px;
+  height: 300px; 
+}
+
+.hover_div {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.card_body:hover .hover_div {
+  opacity: 1;
+}
+
+@media (min-width:1440px) {
+  .container_maxWidth_1440{
+    width: 100%;
+    padding: 0 calc(50vw - 720px);
+  }
+  .conatiner_padding{
+     padding-bottom: 200px;
+  }
+}
+ 
+
+
