--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,21 @@ body {
 .card_body:hover .hover_div {
   opacity: 1;
 }
+.spinner {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 9px solid;
+  border-color: #dbdcef;
+  border-right-color: #474bff;
+  animation: spinner-d3wgkg 1s infinite linear;
+}
+
+@keyframes spinner-d3wgkg {
+  to {
+     transform: rotate(1turn);
+  }
+}
 
 @media (min-width:1440px) {
   .container_maxWidth_1440{
